<resources>
    <string name="app_name">Mini calculator</string>

    <string name="input">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="x">x</string>
    <string name="et_hint">0</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="multiply_sign">X</string>
    <string name="divide_symbol">/</string>
    <string name="multiplication">x</string>
    <string name="division">/</string>
    <string name="value">Value</string>
    <string name="value_2">value</string>
    <string name="minus_oscar">-</string>
    <string name="multiply_oscar">*</string>
    <string name="add_oscar">+</string>
    <string name="divide_oscar">/</string>
</resources>