<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Simple_Calculator">

    <EditText
        android:id="@+id/first_input"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/input"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/second_input"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/second_input"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/input"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/first_input"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button"
        android:textSize="30sp"
        android:text="@string/plus"
        android:backgroundTint="#ADFF2F"
        app:layout_constraintEnd_toStartOf="@+id/substract_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_input" />

    <Button
        android:id="@+id/substract_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button"
        android:text="@string/minus"
        android:textSize="30sp"
        android:backgroundTint="#ADFF2F"
        app:layout_constraintEnd_toStartOf="@+id/multiply_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_button"
        app:layout_constraintTop_toBottomOf="@+id/first_input" />

    <Button
        android:id="@+id/multiply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button"
        android:text="@string/multiply"
        android:backgroundTint="#ADFF2F"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/division_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/substract_button"
        app:layout_constraintTop_toBottomOf="@+id/second_input" />

    <Button
        android:id="@+id/division_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button"
        android:text="@string/divide"
        android:backgroundTint="#ADFF2F"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/multiply_button"
        app:layout_constraintTop_toBottomOf="@+id/second_input" />

    <TextView
        android:id="@+id/calculated_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#d3d3d3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/substract_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>