<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ChibufirstActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_first"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/edit_second"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            tools:ignore="Autofill,LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_subtract"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_dark"
            android:onClick="validateInputs"
            android:text="@string/minus"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_add"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_dark"
            android:onClick="validateInputs"
            android:text="@string/plus"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_multiply"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_dark"
            android:onClick="validateInputs"
            android:text="@string/multiply"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_divide"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_dark"
            android:onClick="validateInputs"
            android:text="@string/divide"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:padding="24dp"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>