<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaofeeqCalculatorActivity">



        <EditText
            android:id="@+id/inputNum1"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="44dp"
            android:background="@color/colorLightGrey"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputNum2"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_marginTop="44dp"
            android:background="@color/colorLightGrey"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.213"
            app:layout_constraintStart_toEndOf="@+id/inputNum1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_subtract"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_marginTop="244dp"
            android:background="@color/colorGreen"
            android:text="@string/minus"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toStartOf="@+id/btn_add"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/colorGreen"
            android:text="@string/plus"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toStartOf="@+id/btn_multiply"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_subtract"
            app:layout_constraintTop_toTopOf="@+id/btn_subtract" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:background="@color/colorGreen"
            android:text="@string/division"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_multiply"
            app:layout_constraintTop_toTopOf="@+id/btn_multiply" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:background="@color/colorGreen"
            android:text="@string/multiplication"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toStartOf="@+id/btn_divide"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_add"
            app:layout_constraintTop_toTopOf="@+id/btn_add" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="371dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorLightGrey"
            android:textAlignment="center"
            android:textColor="@color/colorRed"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>