<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasicCalculator">

    <LinearLayout
        android:id="@+id/calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/first_value"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:background="@drawable/textshape"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textAlignment="center"
                tools:text="0"
                android:hint="0"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:importantForAutofill="no"/>

            <EditText
                android:id="@+id/second_value"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:background="@drawable/textshape"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textAlignment="center"
                tools:text="0"
                android:hint="0"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:importantForAutofill="no"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minus"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/buttons"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/plus"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/buttons"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/multiply"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/buttons"
                android:text="@string/x"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/divide"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/buttons"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:visibility="visible"
                android:freezesText="true"
                android:background="@drawable/textshape"
                android:textSize="36sp"
                android:textColor="@color/black"
                tools:text="0"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>